# gui-qcam_calib

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  ImageView.cpp  ImageView.hpp  Items.cpp  Items.hpp  ItemsStereoCamera.cpp  ItemsStereoCamera.hpp  ItensStereoCamera.cpp  ItensStereoCamera.hpp  Main.cpp  QCamCalib.cpp  QCamCalib.hpp  QCamCalibPlugin.cpp  QCamCalibPlugin.hpp  main_gui.ui
test/: CMakeLists.txt  StereoTools_test.cpp
test/resource/stereo_dataset/left_images/: test
